<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/login_edt_user"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/login_hint"
        android:text="eduardokanno@gmail.com"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/login_edt_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password_hint"
        android:text="skyline"
        android:inputType="textPassword"
        android:maxLength="10"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/login_btn_signin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="signin"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:background= "@color/blue"
    />

    <CheckBox
        android:id="@+id/keep_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/keep_logged_in_hint"
        android:textColor="@color/white" 
        />

    <Button
        android:id="@+id/login_forgot_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password_hint"
        android:textColor="@color/white" />
    
    <Button
        android:id="@+id/login_create_account"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="createAccount"
        android:text="@string/create_account_hint"
        android:textColor="@color/white" />
    
</LinearLayout>