<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="@dimen/activity_default_padding">
    
    <!-- TIPO TICKET -->
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        
        <TextView
	       	android:layout_width="0dp"
	       	android:layout_height="wrap_content"
	       	android:layout_weight="1"
	       	android:text="@string/type"
	       	style="@style/CustomTextView"/>
        
	    <TextView
	       	android:id="@+id/full_history_item_type"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:textSize="22sp"/>    
    </LinearLayout>
    
    <!-- TIPO IRREGULARIDADE -->
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        
        <TextView
	       	android:layout_width="0dp"
	       	android:layout_height="wrap_content"
	       	android:layout_weight="1"
	       	android:text="@string/type_irregularity"
	       	style="@style/CustomTextView"/>
        
	    <TextView
	       	android:id="@+id/full_history_item_type_irregularity"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:textSize="22sp"/>    
    </LinearLayout>

    <!-- PLACA -->
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        
        <TextView
	       	android:layout_width="0dp"
	       	android:layout_height="wrap_content"
	       	android:layout_weight="1"
	       	android:text="@string/plate"
	       	style="@style/CustomTextView"/>
        
	    <TextView
	       	android:id="@+id/full_history_item_plate"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:textSize="22sp"/>    
    </LinearLayout>
           	
    <!-- DATA INICIAL -->
    
   	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
	    
   	    <TextView
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/initial_date"
        	style="@style/CustomTextView"/>
   	    
   	    <TextView
        	android:id="@+id/full_history_item_initial_date"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="22sp"/>    
    </LinearLayout>   	
   
   	<!-- DATA FINAL -->
   	
   	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
	    
   	    <TextView
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/final_date"
        	style="@style/CustomTextView"/>
   	    
	    <TextView
        	android:id="@+id/full_history_item_final_date"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="22sp"/>    
    </LinearLayout>   	
    
   	<!-- SITUAÇÃO -->
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
    	
        <TextView
     		android:layout_width="0dp"
     		android:layout_height="wrap_content"
     		android:layout_weight="1"
     		android:text="@string/situation"
     		style="@style/CustomTextView"/>
        
    	<TextView
     		android:id="@+id/full_history_item_situation"
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:textSize="22sp"/>    
    </LinearLayout>
    
    <!-- FORMA DE PAGAMENTO -->
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
    	
        <TextView
     		android:layout_width="0dp"
     		android:layout_height="wrap_content"
     		android:layout_weight="1"
     		android:text="@string/payment"
     		style="@style/CustomTextView"/>
        
    	<TextView
     		android:id="@+id/full_history_item_payment_method"
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:textSize="22sp"/>    
    </LinearLayout>
    
   	<!-- VALOR -->
   	
   	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
	    
   	    <TextView
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/value"
        	style="@style/CustomTextView"/>   	           	   
        	
	    <TextView
        	android:id="@+id/full_history_item_value"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="22sp"/>    
    </LinearLayout>
    
   	<!-- ÁREA -->
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
    	
        <TextView
     		android:layout_width="0dp"
     		android:layout_height="wrap_content"
     		android:layout_weight="1"
     		android:text="@string/area"
     		style="@style/CustomTextView"/>
        
    	<TextView
     		android:id="@+id/full_history_item_area"
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:textSize="22sp"/>    
    </LinearLayout>
    
</LinearLayout>
