<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <CheckBox 
        android:id="@+id/dialog_input_foreign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreign"
        android:onClick="foreign"/>
    
    <EditText 
        android:id="@+id/dialog_input_edttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <RadioGroup
         android:id="@+id/dialog_input_radiogroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >

        <RadioButton
             android:id="@+id/dialog_input_radiocar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/car" 
             android:checked="true"/>

         <RadioButton
             android:id="@+id/dialog_input_radiomotorcycle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/motorcycle" />
     </RadioGroup>

</LinearLayout>
