<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.panfletovia.activities.ParkActivity" >

    <include layout="@layout/menu_header"/>

    <!-- Spinners -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <!-- Placa -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_default_padding"
            android:text="@string/plate" 
            style="@style/CustomTextView"/>

        <Spinner
            android:id="@+id/park_vehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:padding="@dimen/activity_default_padding"/>

        <!-- Área -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_default_padding"
            android:text="@string/area" 
            style="@style/CustomTextView"/>

        <Spinner
            android:id="@+id/park_area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/area"
            android:padding="@dimen/activity_default_padding" />

        <!-- Período -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_default_padding"
            android:text="@string/time" 
            style="@style/CustomTextView"/>

        <Spinner
            android:id="@+id/park_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/time"
            android:padding="@dimen/activity_default_padding" />
    </LinearLayout>

    <!-- Botões -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/park_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel" />
        
        <Button
            android:id="@+id/park_btn_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buy"
            android:text="@string/buy" />
    </LinearLayout>

</LinearLayout>